# QRefactor

./: README.md  pyproject.toml
plugin/: __init__.py  main.py  qrefactor_dialog.py  qrefactor_plugin.py
plugin/core/: refactor.py
test/: test_refactor.py
