[tool.poetry]
name = "QRefactor"
version = "0.1.0"
description = "A QGIS plugin to refactor project structures and maintain an organized Git repository."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
